--- a/QR-Code-Component/index.html
+++ b/QR-Code-Component/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="qr" src="images/image-qr-code.png" alt="QR Code scanner" width="100%">
+    <img id="qr" src="./images/image-qr-code.png" alt="QR Code scanner" width="100%">
     <p id="first">Improve your front-end skills by building projects</p>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
