--- a/QR-Code-Component/index.html
+++ b/QR-Code-Component/index.html
@@ -7,8 +7,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="qr_code_style.css">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,7 +14,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="qr" src="./images/image-qr-code.png" alt="QR Code scanner" width="100%">
+    <img id="qr" src="./Images/image-qr-code.png" alt="QR Code scanner" width="100%">
     <p id="first">Improve your front-end skills by building projects</p>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
@@ -24,6 +22,5 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Nuthi Haarika</a>.
   </div>
-  
 </body>
 </html>
